bad/assign_field_class_fcall_class_side.example_compiler_output
ERROR
[1mbad/assign_field_class_fcall_class_side.lat:11:12: [1;31merror: [0;1massigning to `Y` from incompatible type `Z`[m
	foo().fld = new Z;
	          [1;32m^[m
